app/assets/css/main.css
#main{
    padding-top: 50px;
}
.vuln-details{
    border-collapse: collapse;
}
.vuln-details td, .vuln-details th {
    padding: 5px;
    border: 1px solid gray;
}

.toggle-warning {
    float: left;
    margin-right: 7px;
}

.versionless-dependency:not(:hover) .related-links{
    display: none;
}

.description{
    border-left: 3px solid black;
    margin-bottom: 3px;
    padding-left: 5px;
}
.badge a{
    color: yellow;
}
#project-selector{
    float: left;
    padding: 5px;
    padding-top: 10px;
}
#project-selector button{
    max-width: 220px;
    overflow: hidden;
    text-overflow: ellipsis;
}
#project-selector .dropdown-menu{
    max-height: 300px;
    overflow: auto;
}
#project-selector .subproject a{
    margin-left: 5px;
    font-size: smaller;
}

h3.library-identification{
    border: 1px solid black;
    padding: 5px;
}

.library-identification-badge-hack{
    display: inline-block;
    width: 1px;
    padding-right: 0;
    padding-left: 0;
    margin-left: 0;
    margin-right: 0;
    visibility: hidden;
}

.jqplot-table-legend{
    background-color: rgba(255, 255, 255, 0.25);
    padding: 5px;
    margin-right: 5px;
}

.jqplot-table-legend-swatch{
    height: 10px;
    width: 10px;
    margin-right: 5px;
}
.jqplot-data-label{
    color: white;
    font-weight: bold;
}
.dependencies-table .identifiers ul, .dependencies-table .identifiers ul li{
    margin-left: 0;
    padding-left: 0;
    list-style-type: none;
}

.severity{
    font-size: smaller;
    margin-bottom: 5px;
    width: 10px;
}

.severity .score{
    font-weight: bolder;
}
.severity .computation-details{
    display: block;
}

.explained{
    border-bottom: 1px dashed black;
}
.explained:after{
    content: "?";
    font-weight: bold;
    display: inline-block;
    color: white;
    background-color: black;
    border: 1px solid black;
    border-radius: 100%;
    text-align: center;
    vertical-align: middle;
    height: 1.5em;
    width: 1.5em;
    margin-left: 0.5em;
    font-size: 70%;
}
.explained:hover{
    border-bottom-color: blue;
}
.explained:hover:after{
    background-color: blue;
    border-color: blue;
}

.help{
    border-left: 5px solid #00c7ff;
    padding-left: 10px;
}

.projects-watching li.with-buttons{
    list-style-type: none;
}
.projects-watching .watched{
    font-weight: bold;
}

.projects-watching .collapsed ul{
    display: none;
}
.projects-watching .watching-btn-expand {
    display: none;
}
.projects-watching .collapsed .watching-btn-expand{
    display: inline;
}
.projects-watching .collapsed .watching-btn-collapse{
    display: none;
}
.projects-watching li{
    position: relative;
}

.projects-watching .toggle-buttons button{
    margin: 0;
    padding: 0;
}
.projects-watching .toggle-buttons{
    position: absolute;
    top: 2px;
    left: -19px;
}


.nav > li.collapse {
    display: none;
}
.nav > li.collapse.in {
    display: list-item;
}

.dependencies-table .vulns{
    text-align: right;
}
.dependencies-table .actions{
    vertical-align: bottom;
    width: 10px;
}
.dependencies-table > tbody > tr:nth-of-type(4n+1), .dependencies-table > tbody > tr:nth-of-type(4n+2) {
    background-color: #f9f9f9;
}
.dependencies-table > tbody > tr.details > td {
    border-top-style: none;
}
.dependencies-table .severity .explained:hover {
    color:blue;
}
.dependencies-table .severity .explained:after {
    content: "";
    display: none;
}
.dependencies-table .severity .tooltip-inner {
    white-space:nowrap;
    max-width:none;
}
.dependencies-table .identifiers .tooltip-inner {
    max-width: 350px;
    width: 350px;
}
.dependencies-table .identifiers .explained{
    border-bottom: none;
}

